# MeshTBD

./: .gitignore  3DEngine_NC.cpp  Just%20forearm.stl  Makefile  ModelConverter.py  PointScaleDetector_NC.py  README.md  VoronoiArm_NC.py  VoronoiFinal.py  VoronoiFinalMILFTest.py  Voronoi_NC.py  abstract.typ  alternateEngine_NC.py  differentVoronoi.py  gui_app.py  meshscript.py  meshscript.txt  meshscript1.5.py  meshscript2.py  meshscript3.py  meshscript4.py  meshscript6.py  meshscript8.py  o3dpyml_SLOW.py  o3dpymlpyacvd_NC.py  planeCalc.py  postprocesso3d_C.py  pyproject.toml  requirements.txt  selectiondraft.txt  updated_voronoi_solidify.py  workflow.txt
Demo/: README.md  demoScript.sh
Drafts/: curiosity.txt  meshlabScript.mlx  meshscript.txt  meshscript3.txt  postprocesso3d_C.py  postprocesso3d_NC.txt  pyml_NC.txt  pyml_NW.txt  pyml_SLOW.py
Mesh InterLibrary Formatter/adapters/: __init__.py  open3d_adapter.py  pyvista_adapter.py
Meshes/: Base Cast Solid.ply  PreCandidate1.ply  _masked_check2.ply  _masked_review.ply  a1.ply  a10.ply  a11.ply  a12.ply  a2.ply  a3.ply  a4.ply  a8.ply  a9.ply  dual_quality_smoke_input.ply  dual_quality_smoke_masked.ply  maskedoutput.ply  pyvista_cut_surface.ply
STL-Volume-Model-Calculator/: volume_calculator.py
STL-Volume-Model-Calculator/stl_volume_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Tests/: test_phase4_regressions.py
Utilities/: dualPlaneQuality.py  planeCalc.py  testBoolean.py
archive/drafts/: PointScaleDetector_NC.py  VoronoiFinal.py  littlescript.txt  manualGD_NC.py  o3d_NC.txt  postprocessingattempt.txt  pyacvd_NC.py  test.py  universeSet_NC.py
docs/reports/: FINAL_REVIEW_REPORT.md  REVIEW_PLAN.md  phase1-scope-inventory.md  phase2-automated-baseline.md  phase3-manual-review.md  phase4-test-gaps.md  phase5-remediation-log.md
examples/: README.md
mesh_interlibrary_formatter/: __init__.py  core.py
mesh_interlibrary_formatter/adapters/: bpy_adapter.py  open3d_adapter.py  pymeshlab_adapter.py  pyvista_adapter.py  trimesh_adapter.py
mesh_interlibrary_formatter/cli/: scale_calibrate.py
meshtbd/: __init__.py  core.py
meshtbd/adapters/: bpy_adapter.py  open3d_adapter.py  pymeshlab_adapter.py  pyvista_adapter.py  trimesh_adapter.py
meshtbd/cli/: scale_calibrate.py  scale_calibrate2.py
scripts/analysis/: new_algo.py  tangent_calc.py
scripts/demo/: run_demo.sh
src/mesh_interlibrary_formatter/: __init__.py  core.py
src/meshtbd/: __init__.py  core.py  (+2 more)
tests/: test_phase4_regressions.py
tmp/: pyvista_cut_surface.ply
(+11 files in other folders)
