[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshtbd"
version = "0.1.0"
description = "Script-first tooling for calibrating scanned limb meshes and generating cast-like Voronoi shells."
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "bpy>=4.5.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "open3d>=0.19.0",
    "polyscope>=2.6.0",
    "pymeshlab>=2023.12.post3",
    "pyvista>=0.46.1",
    "scipy>=1.16.1",
    "trimesh>=4.9.0",
]

[project.scripts]
meshtbd-voronoi = "meshtbd.cli.voronoi_cast:main"

[tool.uv]
required-environments = [
	"sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'"
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshtbd", "src/mesh_interlibrary_formatter"]

[dependency-groups]
dev = [
    "inspect-it>=0.3.2",
    "ipykernel>=7.2.0",
    "ty>=0.0.15",
]
